--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ tokio = "0.1"
 tokio-codec = "0.1"
 tokio-io = "0.1"
 bytes = "0.4"
+log = "0.4"
 
 [dev-dependencies]
 tempfile = "3"
 ftp = "3"
+pretty_env_logger = "0.2"
