Migrate parser and `respond` closure to failure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ tokio-io = "0.1"
 bytes = "0.4"
 log = "0.4"
 chrono = "0.4"
+failure = "0.1"
+failure_derive = "0.1"
 
 [dev-dependencies]
 tempfile = "3"
