--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ log = "0.4"
 chrono = "0.4"
 failure = "0.1"
 failure_derive = "0.1"
+pam-auth = { version = "0.5", optional = true }
 
 [dev-dependencies]
 tempfile = "3"
@@ -20,3 +21,7 @@ ftp = "3"
 pretty_env_logger = "0.2"
 pretty_assertions = "0.5"
 rand = "0.5"
+lazy_static = "1.1"
+
+[features]
+pam = ["pam-auth"]
