--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ chrono = "0.4"
 failure = "0.1"
 failure_derive = "0.1"
 pam-auth = { version = "0.5", optional = true }
+path_abs = "0.4"
 
 [dev-dependencies]
 tempfile = "3"
