--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "firetrap"
 version = "0.1.0"
 authors = ["Koen Wilde <koen@chillheid.nl>"]
+description = "Modern, safe and extensible FTP server library for Rust"
+documentation = "https://docs.rs/firetrap/"
+repository = "https://github.com/koenw/firetrap"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+keywords = ["ftp"]
+categories = ["network-programming"]
 
 [dependencies]
 futures = "0.1"
