--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
 language: rust
+
 rust:
   - stable
   - beta
   - nightly
-matrix:
-  allow_failures:
-    - rust: nightly
+
+os:
+  - linux
+  - osx
+
 script:
   - cargo build --verbose --all --all-features
   - cargo test --verbose --all --all-features
+
+matrix:
+  allow_failures:
+    - rust: nightly
+    - os: osx
