Enable cargo cache in travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ script:
   - cargo build --verbose --all --all-features
   - cargo test --verbose --all --all-features
 
+cache: cargo
+
 matrix:
   allow_failures:
     - rust: nightly
