Switch to Rust 2018
Looking forward to async/await!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 keywords = ["ftp"]
 categories = ["network-programming"]
+edition = "2018"
 
 [dependencies]
 futures = "0.1"
