--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ failure = "0.1"
 failure_derive = "0.1"
 pam-auth = { version = "0.5", optional = true }
 path_abs = "0.4"
+uuid = { version = "0.7", features = ["v4"] }
 
 [dev-dependencies]
 tempfile = "3"
