--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ os:
   - linux
   - osx
 
+before_script:
+  - rustup component add rustfmt
+
 script:
+  - cargo fmt --all -- --check
   - cargo build --verbose --all --all-features
   - cargo test --verbose --all --all-features
 
