--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,14 @@ tokio = "0.1"
 tokio-codec = "0.1"
 tokio-io = "0.1"
 bytes = "0.4"
+lazy_static = "1.3.0"
 log = "0.4"
 chrono = "0.4"
 failure = "0.1"
 failure_derive = "0.1"
 pam-auth = { version = "0.5", optional = true }
 path_abs = "0.4"
+prometheus = "0.4"
 uuid = { version = "0.7", features = ["v4"] }
 
 [dev-dependencies]
