Implemented Auth TLS, PROT, PBSZ & CCC

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures = "0.1"
 tokio = "0.1"
 tokio-codec = "0.1"
 tokio-io = "0.1"
+rustls = "0.15.2"
 bytes = "0.4"
 log = "0.4"
 chrono = "0.4"
