--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,13 @@ pam-auth = { version = "0.5", optional = true }
 path_abs = "0.4"
 uuid = { version = "0.7", features = ["v4"] }
 
+atgc = { path = "../atgc" }
+
+serde = { version="1.0.90", features=["derive"]}
+serde_json = "1.0.39"
+hyper = "0.12.27"
+hyper-tls = "0.3.2"
+
 [dev-dependencies]
 tempfile = "3"
 ftp = "3"
