--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ tokio-codec = "0.1"
 tokio-io = "0.1"
 bytes = "0.4"
 log = "0.4"
-chrono = "0.4"
+chrono = {version = "0.4", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
 pam-auth = { version = "0.5", optional = true }
