--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ serde_json = "1.0.39"
 hyper = "0.12.28"
 hyper-tls = "0.3.2"
 sync_oauth2 = {path = "./examples/sync_oauth2", optional = true}
+mime = {version = "0.3.13", optional = true}
 
 [dev-dependencies]
 tempfile = "3"
@@ -42,6 +43,7 @@ lazy_static = "1.1"
 [features]
 pam = ["pam-auth"]
 oauth2 = ["sync_oauth2"]
+cloud_storage = ["mime"]
 
 [[example]]
 name = "pam"
@@ -49,4 +51,4 @@ required-features = ["pam"]
 
 [[example]]
 name = "gcs"
-required-features = ["oauth2"]
+required-features = ["oauth2", "cloud_storage"]
