--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ hyper = "0.12.28"
 hyper-tls = "0.3.2"
 sync_oauth2 = {path = "./examples/sync_oauth2", optional = true}
 mime = {version = "0.3.13", optional = true}
+url = { version = "1.7.2", optional = true }
 
 [dev-dependencies]
 tempfile = "3"
