--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "firetrap"
 version = "0.1.0"
-authors = ["Koen Wilde <koen@chillheid.nl>"]
+authors = [
+    "Koen Wilde <koen@chillheid.nl>",
+    "Hannes de Jager <hdejager@bol.com>",
+    "Steven Meunier <smeunier@bol.com",
+    "Agoston Horvath <ahorvath@bol.com>"
+   ]
 description = "Modern, safe and extensible FTP server library for Rust"
 documentation = "https://docs.rs/firetrap/"
 repository = "https://github.com/koenw/firetrap"
@@ -12,6 +17,7 @@ categories = ["network-programming"]
 edition = "2018"
 
 [dependencies]
+regex = "1"
 futures = "0.1"
 tokio = "0.1"
 tokio-codec = "0.1"
@@ -24,6 +30,11 @@ chrono = "0.4"
 failure = "0.1"
 failure_derive = "0.1"
 pam-auth = { version = "0.5", optional = true }
+hyper = { version = "0.12.27", optional = true }
+url = { version = "1.7.2", optional = true }
+http = { version = "0.1", optional = true }
+serde = { version = "1.0", optional = true, features = ["derive"] }
+serde_json = { version = "1.0", optional = true }
 path_abs = "0.4"
 prometheus = "0.4"
 uuid = { version = "0.7", features = ["v4"] }
@@ -34,11 +45,15 @@ ftp = "3"
 pretty_env_logger = "0.2"
 pretty_assertions = "0.5"
 rand = "0.6"
-lazy_static = "1.1"
 
 [features]
 pam = ["pam-auth"]
+rest = ["hyper", "url", "http", "serde", "serde_json"]
 
 [[example]]
 name = "pam"
 required-features = ["pam"]
+
+[[example]]
+name = "rest"
+required-features = ["rest"]
