--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ os:
   - osx
 
 before_script:
-  - rustup component add rustfmt
+  - rustup component add rustfmt clippy
 
 script:
+  - cargo clippy -- -D warnings
   - cargo fmt --all -- --check
   - cargo build --verbose --all --all-features
   - cargo test --verbose --all --all-features
