resolve merge conflicts

--- a/examples/sync_oauth2/Cargo.toml
+++ b/examples/sync_oauth2/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Dávid Kosztka <dkosztka@bol.com>"]
 edition = "2018"
 
 [dependencies]
-yup-oauth2 = {version="^1"}
-hyper = {version="^0.10"}
-hyper-rustls = {version="^0.6"}
+yup-oauth2 = {version="1"}
+hyper = {version="0.10.16"}
+hyper-rustls = {version="0.6.2"}
