--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,22 +24,26 @@ futures = "0.1"
 tokio = "0.1"
 tokio-codec = "0.1"
 tokio-io = "0.1"
-rustls = "0.15.2"
+rustls = "0.13.1"
 bytes = "0.4"
 lazy_static = "1.3.0"
 log = "0.4"
-chrono = "0.4"
+chrono = {version = "0.4", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
-pam-auth = { version = "0.5", optional = true }
-hyper = { version = "0.12.27", optional = true }
+pam-auth = { version = "0.5.0", optional = true }
+hyper = { version = "0.12.33", optional = true }
 url = { version = "1.7.2", optional = true }
 http = { version = "0.1", optional = true }
-serde = { version = "1.0", optional = true, features = ["derive"] }
-serde_json = { version = "1.0", optional = true }
+serde = { version = "1.0.98", optional = true, features = ["derive"] }
+serde_json = { version = "1.0.40", optional = true }
 path_abs = "0.4"
 prometheus = "0.4"
 uuid = { version = "0.7", features = ["v4"] }
+
+hyper-tls = "0.3.2"
+sync_oauth2 = {path = "./examples/sync_oauth2", optional = true}
+mime = {version = "0.3.13", optional = true}
 
 [dev-dependencies]
 tempfile = "3"
@@ -50,11 +54,17 @@ rand = "0.6"
 
 [features]
 pam = ["pam-auth"]
+oauth2 = ["sync_oauth2"]
+cloud_storage = ["mime", "url"]
 rest = ["hyper", "url", "http", "serde", "serde_json"]
 
 [[example]]
 name = "pam"
 required-features = ["pam"]
+
+[[example]]
+name = "gcs"
+required-features = ["oauth2", "cloud_storage"]
 
 [[example]]
 name = "rest"
