--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ futures = "0.1"
 tokio = "0.1"
 tokio-codec = "0.1"
 tokio-io = "0.1"
-rustls = "0.13.1"
+rustls = "0.15.2"
 bytes = "0.4"
 lazy_static = "1.3.0"
 log = "0.4"
@@ -41,8 +41,8 @@ path_abs = "0.4"
 prometheus = "0.4"
 uuid = { version = "0.7", features = ["v4"] }
 
-hyper-tls = "0.3.2"
-#sync_oauth2 = {path = "./examples/sync_oauth2", version = "0.1.0", optional = true}
+hyper-rustls = {version = "0.16.0", optional = true}
+yup-oauth2 = {version = "= 3.0.4", optional = true}
 mime = {version = "0.3.13", optional = true}
 
 [dev-dependencies]
@@ -54,8 +54,8 @@ rand = "0.6"
 
 [features]
 pam = ["pam-auth"]
-#oauth2 = ["sync_oauth2"]
-cloud_storage = ["mime", "url"]
+oauth2 = ["yup-oauth2", "hyper-rustls"]
+cloud_storage = ["mime", "url", "hyper", "serde", "serde_json"]
 rest = ["hyper", "url", "http", "serde", "serde_json"]
 
 [[example]]
