--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ prometheus = "0.4"
 uuid = { version = "0.7", features = ["v4"] }
 
 hyper-rustls = {version = "0.16.0", optional = true}
-yup-oauth2 = {version = "= 3.0.4", optional = true}
+yup-oauth2 = {version = "3.1.0", optional = true}
 mime = {version = "0.3.13", optional = true}
 
 [dev-dependencies]
