--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ serde_json = { version = "1.0.40", optional = true }
 path_abs = "0.4"
 prometheus = "0.4"
 uuid = { version = "0.7", features = ["v4"] }
+rand = "0.6"
 
 hyper-rustls = {version = "0.16.0", optional = true}
 yup-oauth2 = {version = "3.1.0", optional = true}
