--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        toolchain: [stable, beta, nightly]
+        toolchain: [stable, beta]
 
     steps:
     - uses: actions/checkout@v1
