add pam libraries for github action

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Install pam
+      run: apt-get install libpam0g-dev
     - name: Switch toolchain
       run: rustup default ${{matrix.toolchain}}
     - name: Add rustfmt and clippy
