--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ edition = "2018"
 
 [dependencies]
 regex = "1"
-futures = "0.1"
+futures = {version = "0.3", features = ["compat"]}
+futures-util = "0.3.1"
 tokio = "0.1"
 tokio-codec = "0.1"
 tokio-io = "0.1"
