--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ edition = "2018"
 
 [dependencies]
 regex = "1"
+async-trait = "0.1.22"
 futures = {version = "0.3", features = ["compat"]}
 futures-util = "0.3.1"
 tokio = "0.1"
@@ -35,9 +36,9 @@ chrono = {version = "0.4", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
 pam-auth = { version = "0.5.0", optional = true }
-hyper = { version = "0.12.33", optional = true }
+hyper = { version = "0.13.1", optional = true }
 url = { version = "1.7.2", optional = true }
-http = { version = "0.1", optional = true }
+http = { version = "0.2", optional = true }
 serde = { version = "1.0.98", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.40", optional = true }
 path_abs = "0.4"
