--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,30 +21,31 @@ categories = ["network-programming"]
 edition = "2018"
 
 [dependencies]
-regex = "1"
 async-trait = "0.1.22"
-futures = {version = "0.3", features = ["compat"]}
-futures-util = "0.3.1"
-tokio = "0.1"
-tokio-codec = "0.1"
-tokio-io = "0.1"
-rustls = "0.15.2"
 bytes = "0.4"
-lazy_static = "1.3.0"
-log = "0.4"
 chrono = {version = "0.4", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
-pam-auth = { version = "0.5.0", optional = true }
-hyper = { version = "0.13.1", optional = true }
-url = { version = "1.7.2", optional = true }
+futures = {version = "0.3", features = ["compat"]}
+futures-util = "0.3.1"
 http = { version = "0.2", optional = true }
-serde = { version = "1.0.98", optional = true, features = ["derive"] }
-serde_json = { version = "1.0.40", optional = true }
+hyper = { version = "0.13.1", optional = true }
+itertools = "0.8.2"
+lazy_static = "1.3.0"
+log = "0.4"
+pam-auth = { version = "0.5.0", optional = true }
 path_abs = "0.4"
 prometheus = "0.7"
-uuid = { version = "0.7", features = ["v4"] }
 rand = "0.6"
+regex = "1"
+rustls = "0.15.2"
+serde = { version = "1.0.98", optional = true, features = ["derive"] }
+serde_json = { version = "1.0.40", optional = true }
+tokio = {version = "0.2.9", features = ["fs"]}
+tokio-codec = "0.1"
+tokio-io = "0.1"
+url = { version = "1.7.2", optional = true }
+uuid = { version = "0.7", features = ["v4"] }
 
 hyper-rustls = {version = "0.16.0", optional = true}
 yup-oauth2 = {version = "3.1.0", optional = true}
