--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ log = "0.4"
 chrono = {version = "0.4", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
-pam-auth = { version = "0.5.0", optional = true }
+pam = { version = "0.7.0", optional = true }
 hyper = { version = "0.12.33", optional = true }
 url = { version = "1.7.2", optional = true }
 http = { version = "0.1", optional = true }
@@ -56,14 +56,14 @@ pretty_assertions = "0.5"
 rand = "0.6"
 
 [features]
-pam = ["pam-auth"]
+pam_auth = ["pam"]
 oauth2 = ["yup-oauth2", "hyper-rustls"]
 cloud_storage = ["oauth2", "mime", "url", "hyper", "serde", "serde_json"]
 rest = ["hyper", "url", "http", "serde", "serde_json"]
 
 [[example]]
 name = "pam"
-required-features = ["pam"]
+required-features = ["pam_auth"]
 
 [[example]]
 name = "gcs"
