--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,14 +22,14 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1.22"
-bytes = "0.4"
+bytes = "0.5.4"
 chrono = {version = "0.4", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
 futures = {version = "0.3", features = ["compat"]}
 futures-util = "0.3.1"
 http = { version = "0.2", optional = true }
-hyper = { version = "0.13.1", optional = true }
+hyper = { version = "0.13.1", optional = true, features = ["stream"]}
 itertools = "0.8.2"
 lazy_static = "1.3.0"
 log = "0.4"
