--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,13 @@ categories = ["network-programming"]
 edition = "2018"
 
 [dependencies]
+async-trait = "0.1.22"
 regex = "1"
 futures = "0.1"
 tokio = "0.1"
-tokio-codec = "0.1"
-tokio-io = "0.1"
+futures03 = {package = "futures", version = "0.3", features = ["compat", "io-compat"]}
+tokio02 = { package="tokio", version = "0.2", features = ["fs", "io-util", "macros", "stream"]}
+tokio02util = { package="tokio-util", path="./vendor/tokio-util", features=["compat"] }
 rustls = "0.15.2"
 bytes = "0.4"
 lazy_static = "1.3.0"
@@ -54,6 +56,7 @@ ftp = "3"
 pretty_env_logger = "0.2"
 pretty_assertions = "0.5"
 rand = "0.6"
+tokio-compat = { version = "0.1", features = ["rt-full"] }
 
 [features]
 pam = ["pam-auth"]
