--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,13 @@ edition = "2018"
 [dependencies]
 async-trait = "0.1.22"
 bytes = "0.5.4"
-chrono = {version = "0.4", features = ["serde"]}
+chrono = {version = "0.4.10", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
 futures = {version = "0.3", features = ["compat"]}
 futures-util = "0.3.1"
 http = { version = "0.2", optional = true }
-hyper = { version = "0.13.1", optional = true, features = ["stream"]}
+hyper = { version = "0.13.2", optional = true, features = ["stream"]}
 itertools = "0.8.2"
 lazy_static = "1.3.0"
 log = "0.4"
@@ -39,11 +39,11 @@ prometheus = "0.7"
 rand = "0.6"
 regex = "1"
 rustls = "0.16.0"
-serde = { version = "1.0.98", optional = true, features = ["derive"] }
-serde_json = { version = "1.0.40", optional = true }
+serde = { version = "1.0.104", optional = true, features = ["derive"]}
+serde_json = { version = "1.0.46", optional = true }
 tokio = {version = "0.2.9", features = ["fs", "io-util", "macros"]}
-tokio-codec = "0.1"
 tokio-io = "0.1"
+tokio-util = "0.2"
 url = { version = "1.7.2", optional = true }
 uuid = { version = "0.7", features = ["v4"] }
 
