--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ futures = "0.1"
 tokio = "0.1"
 futures03 = {package = "futures", version = "0.3", features = ["compat", "io-compat"]}
 tokio02 = { package="tokio", version = "0.2", features = ["fs", "io-util", "macros", "stream"]}
+tokio02util = { package="tokio-util", path="./vendor/tokio-util", features=["compat"] }
 rustls = "0.15.2"
 bytes = "0.4"
 lazy_static = "1.3.0"
