a simple authenticator for a json formatted credentials file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ pam = ["pam-auth"]
 oauth2 = ["yup-oauth2", "hyper-rustls"]
 cloud_storage = ["oauth2", "mime", "url", "hyper", "serde", "serde_json"]
 rest = ["hyper", "url", "http", "serde", "serde_json"]
+jsonfile_auth = ["serde", "serde_json"]
 
 [[example]]
 name = "pam"
@@ -75,3 +76,8 @@ required-features = ["cloud_storage"]
 [[example]]
 name = "rest"
 required-features = ["rest"]
+
+[[example]]
+name = "jsonfile_auth"
+required-features = ["jsonfile_auth"]
+
