--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ futures = "0.1"
 tokio = "0.1"
 futures03 = {package = "futures", version = "0.3", features = ["compat", "io-compat"]}
 tokio02 = { package="tokio", version = "0.2.13", features = ["fs", "io-util", "macros", "stream"]}
-tokio02util = { package="tokio-util", path="./vendor/tokio-util", features=["compat"] }
+tokio02util = { package="tokio-util", version = "0.3.0", features=["compat"] }
 tokio-compat = { version = "0.1", features = ["rt-full"] }
 rustls = "0.15.2"
 bytes = "0.4"
