--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,12 +24,13 @@ async-trait = "0.1.22"
 regex = "1"
 futures = "0.1"
 tokio = "0.1"
-futures03 = {package = "futures", version = "0.3", features = ["compat", "io-compat"]}
-tokio02 = { package="tokio", version = "0.2.13", features = ["fs", "io-util", "macros", "stream"]}
-tokio02util = { package="tokio-util", version = "0.3.0", features=["compat"] }
+futures03 = {package = "futures", version = "0.3", features = ["compat", "io-compat", "std"]}
+tokio02 = { package="tokio", version = "0.2.13", features = ["full"]}
+tokio02util = { package="tokio-util", version = "0.3.0", features=["compat", "codec"] }
 tokio-compat = { version = "0.1", features = ["rt-full"] }
 rustls = "0.15.2"
 bytes = "0.4"
+bytes05 = { package="bytes", version = "0.5" }
 lazy_static = "1.3.0"
 log = "0.4"
 chrono = {version = "0.4", features = ["serde"]}
