--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,9 @@ log = "0.4"
 chrono = {version = "0.4", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
-pam-auth = { version = "0.5.0", optional = true }
+pam-auth = { package = "pam", version = "0.7", optional = true }
 hyper = { version = "0.12.33", optional = true }
+hyper13 = { package = "hyper", version = "0.13", optional = true }
 url = { version = "1.7.2", optional = true }
 http = { version = "0.1", optional = true }
 serde = { version = "1.0.98", optional = true, features = ["derive"] }
@@ -61,7 +62,7 @@ pretty_assertions = "0.5"
 
 [features]
 pam = ["pam-auth"]
-rest = ["hyper", "url", "http", "serde", "serde_json"]
+rest = ["hyper13", "url", "http", "serde", "serde_json"]
 jsonfile_auth = ["serde", "serde_json"]
 cloud_storage = ["oauth2", "mime", "url", "hyper", "serde", "serde_json"]
 oauth2 = ["yup-oauth2", "hyper-rustls"]
