--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ rand = "0.6"
 hyper-rustls = {version = "0.16.0", optional = true}
 yup-oauth2 = {version = "3.1.0", optional = true}
 mime = {version = "0.3.13", optional = true}
+itertools = "0.9"
 
 [dev-dependencies]
 tempfile = "3"
