--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,15 +22,14 @@ edition = "2018"
 [dependencies]
 async-trait = "0.1.22"
 regex = "1"
-futures = "0.1"
 tokio = "0.1"
-futures03 = {package = "futures", version = "0.3", features = ["compat", "io-compat", "std"]}
-tokio02 = { package="tokio", version = "0.2.13", features = ["full"]}
-tokio02util = { package="tokio-util", version = "0.3.0", features=["compat", "codec"] }
+futures = {version = "0.3", features = ["compat", "io-compat", "std"]}
+tokio02 = { package="tokio", version = "0.2.15", features = ["full"]}
+tokio02util = { package="tokio-util", version = "0.3.1", features=["compat", "codec"] }
 tokio02tls = { package="tokio-tls", version = "0.3.0" }
 tokio-compat = { version = "0.1", features = ["rt-full"] }
 native-tls = "0.2.4"
-rustls = "0.15.2"
+rustls = "0.16.0"
 bytes = "0.4"
 bytes05 = { package="bytes", version = "0.5" }
 lazy_static = "1.3.0"
@@ -39,10 +38,9 @@ chrono = {version = "0.4", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
 pam-auth = { package = "pam", version = "0.7", optional = true }
-hyper = { version = "0.12.33", optional = true }
-hyper13 = { package = "hyper", version = "0.13", optional = true }
+hyper = { version = "0.13", optional = true }
 url = { version = "1.7.2", optional = true }
-http = { version = "0.1", optional = true }
+http = { version = "0.2.1", optional = true }
 serde = { version = "1.0.98", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.40", optional = true }
 path_abs = "0.4"
@@ -50,8 +48,8 @@ prometheus = "0.7"
 uuid = { version = "0.7", features = ["v4"] }
 rand = "0.6"
 
-hyper-rustls = {version = "0.16.0", optional = true}
-yup-oauth2 = {version = "3.1.0", optional = true}
+hyper-rustls = {version = "0.19.1", optional = true}
+yup-oauth2 = {version = "4.1.0", optional = true}
 mime = {version = "0.3.13", optional = true}
 itertools = "0.9"
 
@@ -63,7 +61,7 @@ pretty_assertions = "0.5"
 
 [features]
 pam = ["pam-auth"]
-rest = ["hyper13", "url", "http", "serde", "serde_json"]
+rest = ["hyper", "url", "http", "serde", "serde_json"]
 jsonfile_auth = ["serde", "serde_json"]
 cloud_storage = ["oauth2", "mime", "url", "hyper", "serde", "serde_json"]
 oauth2 = ["yup-oauth2", "hyper-rustls"]
