--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,16 +20,16 @@ categories = ["network-programming"]
 edition = "2018"
 
 [dependencies]
-async-trait = "0.1.22"
+async-trait = "0.1.30"
 regex = "1"
 futures = {version = "0.3", features = ["compat", "io-compat", "std"]}
-tokio = { version = "0.2.15", features = ["full"]}
+tokio = { version = "0.2.17", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs"]}
 tokio-util = { version = "0.3.1", features=["codec"] }
 tokio-tls = { version = "0.3.0" }
 native-tls = "0.2.4"
 rustls = "0.16.0"
 bytes = "0.4"
-bytes05 = { package="bytes", version = "0.5" }
+bytes05 = { package="bytes", version = "0.5.4" }
 lazy_static = "1.3.0"
 log = "0.4"
 chrono = {version = "0.4", features = ["serde"]}
@@ -39,8 +39,8 @@ pam-auth = { package = "pam", version = "0.7", optional = true }
 hyper = { version = "0.13", optional = true }
 url = { version = "1.7.2", optional = true }
 http = { version = "0.2.1", optional = true }
-serde = { version = "1.0.98", optional = true, features = ["derive"] }
-serde_json = { version = "1.0.40", optional = true }
+serde = { version = "1.0.106", optional = true, features = ["derive"] }
+serde_json = { version = "1.0.51", optional = true }
 path_abs = "0.4"
 prometheus = "0.7"
 uuid = { version = "0.7", features = ["v4"] }
@@ -48,7 +48,7 @@ rand = "0.6"
 
 hyper-rustls = {version = "0.19.1", optional = true}
 yup-oauth2 = {version = "4.1.0", optional = true}
-mime = {version = "0.3.13", optional = true}
+mime = {version = "0.3.16", optional = true}
 itertools = "0.9"
 
 [dev-dependencies]
@@ -56,6 +56,7 @@ tempfile = "3"
 ftp = "3"
 pretty_env_logger = "0.2"
 pretty_assertions = "0.5"
+tokio = { version = "0.2.17", features = ["rt-threaded"]}
 
 [features]
 pam = ["pam-auth"]
