--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,25 +27,25 @@ tokio = { version = "0.2.17", features = ["rt-core", "net", "sync", "io-util", "
 tokio-util = { version = "0.3.1", features=["codec"] }
 tokio-tls = { version = "0.3.0" }
 native-tls = "0.2.4"
-rustls = "0.16.0"
+rustls = "0.17.0"
 bytes = "0.5.4"
-lazy_static = "1.3.0"
+lazy_static = "1.4.0"
 log = "0.4"
 chrono = {version = "0.4", features = ["serde"]}
 failure = "0.1"
 failure_derive = "0.1"
 pam-auth = { package = "pam", version = "0.7", optional = true }
 hyper = { version = "0.13", optional = true }
-url = { version = "1.7.2", optional = true }
+percent-encoding = { version = "2.1.0", optional = true }
 http = { version = "0.2.1", optional = true }
 serde = { version = "1.0.106", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.51", optional = true }
-path_abs = "0.4"
+path_abs = "0.5.0"
 prometheus = "0.8.0"
-uuid = { version = "0.7", features = ["v4"] }
-rand = "0.6"
+uuid = { version = "0.8.1", features = ["v4"] }
+rand = "0.7.3"
 
-hyper-rustls = {version = "0.19.1", optional = true}
+hyper-rustls = {version = "0.20.0", optional = true}
 yup-oauth2 = {version = "4.1.0", optional = true}
 mime = {version = "0.3.16", optional = true}
 itertools = "0.9"
@@ -53,15 +53,15 @@ itertools = "0.9"
 [dev-dependencies]
 tempfile = "3"
 ftp = "3"
-pretty_env_logger = "0.2"
-pretty_assertions = "0.5"
+pretty_env_logger = "0.4.0"
+pretty_assertions = "0.6.1"
 tokio = { version = "0.2.17", features = ["rt-threaded"]}
 
 [features]
 pam_auth = ["pam-auth"]
-rest_auth = ["hyper", "url", "http", "serde", "serde_json"]
+rest_auth = ["hyper", "percent-encoding", "http", "serde", "serde_json"]
 jsonfile_auth = ["serde", "serde_json"]
-cloud_storage = ["oauth2", "mime", "url", "hyper", "serde", "serde_json"]
+cloud_storage = ["oauth2", "mime", "percent-encoding", "hyper", "serde", "serde_json"]
 oauth2 = ["yup-oauth2", "hyper-rustls"]
 
 [[example]]
