--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ hyper-rustls = {version = "0.20.0", optional = true}
 yup-oauth2 = {version = "4.1.0", optional = true}
 mime = {version = "0.3.16", optional = true}
 itertools = "0.9.0"
+proxy-protocol = {version = "0.1.1"}
 
 [dev-dependencies]
 tempfile = "3.1.0"
