--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ edition = "2018"
 async-trait = "0.1.30"
 regex = "1.3.6"
 futures = {version = "0.3.4", features = ["compat", "io-compat", "std"]}
-tokio = { version = "0.2.17", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs"]}
+tokio = { version = "0.2.18", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs"]}
 tokio-util = { version = "0.3.1", features=["codec"] }
 tokio-tls = { version = "0.3.0" }
 native-tls = "0.2.4"
@@ -37,7 +37,6 @@ failure_derive = "0.1.7"
 pam-auth = { package = "pam", version = "0.7.0", optional = true }
 hyper = { version = "0.13.4", optional = true }
 percent-encoding = { version = "2.1.0", optional = true }
-http = { version = "0.2.1", optional = true }
 serde = { version = "1.0.106", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.51", optional = true }
 path_abs = "0.5.0"
@@ -55,12 +54,12 @@ tempfile = "3.1.0"
 ftp = "3.0.1"
 pretty_env_logger = "0.4.0"
 pretty_assertions = "0.6.1"
-tokio = { version = "0.2.17", features = ["rt-threaded"]}
+tokio = { version = "0.2.18", features = ["rt-threaded"]}
 clap = "2.33.0"
 
 [features]
 pam_auth = ["pam-auth"]
-rest_auth = ["hyper", "percent-encoding", "http", "serde", "serde_json"]
+rest_auth = ["hyper", "percent-encoding", "serde", "serde_json"]
 jsonfile_auth = ["serde", "serde_json"]
 cloud_storage = ["oauth2", "mime", "percent-encoding", "hyper", "serde", "serde_json"]
 oauth2 = ["yup-oauth2", "hyper-rustls"]
