--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ yup-oauth2 = {version = "4.1.0", optional = true}
 mime = {version = "0.3.16", optional = true}
 itertools = "0.9.0"
 proxy-protocol = {version = "0.1.1"}
+chashmap = {version = "2.2.2"}
 
 [dev-dependencies]
 tempfile = "3.1.0"
