--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,6 @@ log = "0.4.8"
 chrono = {version = "0.4.11", features = ["serde"]}
 failure = "0.1.7"
 failure_derive = "0.1.7"
-pam-auth = { package = "pam", version = "0.7.0", optional = true }
 hyper = { version = "0.13.5", optional = true }
 percent-encoding = { version = "2.1.0", optional = true }
 serde = { version = "1.0.106", optional = true, features = ["derive"] }
@@ -49,6 +48,9 @@ yup-oauth2 = {version = "4.1.0", optional = true}
 mime = {version = "0.3.16", optional = true}
 itertools = "0.9.0"
 proxy-protocol = {version = "0.1.1"}
+
+[target.'cfg(unix)'.dependencies]
+pam-auth = { package = "pam", version = "0.7.0", optional = true }
 
 [dev-dependencies]
 tempfile = "3.1.0"
