add rustfmt for nightly too

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ os:
 
 before_script: 
     - rm -rf "$TRAVIS_HOME/.cargo/registry/src"
-    - if [ $TRAVIS_RUST_VERSION != 'nightly' ]; then rustup component add rustfmt clippy; else rustup component add clippy --toolchain=nightly || cargo install --git https://github.com/rust-lang/rust-clippy/ --force clippy; fi
+    - rustup component add rustfmt
+    - if [ $TRAVIS_RUST_VERSION != 'nightly' ]; then rustup component add clippy; else rustup component add clippy --toolchain=nightly || cargo install --git https://github.com/rust-lang/rust-clippy/ --force clippy; fi
 
 
 script:
