Attempt to stabilize nightly build and add windows build (#200)
* attemt to stablize nightly build and add windows build

* add rustfmt for nightly too

* remove MetadataExt

* fiddle with pam example

* remove pam example

* allow failure on Windows

* rustfmt pasv.rs

* do not cache cargo

* merge master, enable branches, update dependencies

* use stuff that got lost during merge

* cache cargo

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,14 @@ rust:
 os:
   - linux
   - osx
+  - windows
 
-before_script:
+before_script: 
   - rm -rf "$TRAVIS_HOME/.cargo/registry/src"
-  - rustup component add rustfmt clippy
+  - rustup component add rustfmt
+  - if [ $TRAVIS_RUST_VERSION != 'nightly' ]; then rustup component add clippy; else rustup component add clippy --toolchain=nightly || cargo install --git https://github.com/rust-lang/rust-clippy/ --force clippy; fi
+
+cache: cargo
 
 script:
   - cargo fmt --all -- --check
@@ -19,9 +23,8 @@ script:
   - cargo test --verbose --all-features --all-targets
   - cargo build --verbose --all-features --all-targets
 
-cache: cargo
-
 matrix:
   allow_failures:
     - rust: nightly
+    - os: windows
   fast_finish: true
