--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ edition = "2018"
 async-trait = "0.1.30"
 regex = "1.3.7"
 futures = {version = "0.3.4", features = ["compat", "io-compat", "std"]}
-tokio = { version = "0.2.18", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs"]}
+tokio = { version = "0.2.20", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs"]}
 tokio-util = { version = "0.3.1", features=["codec"] }
 tokio-tls = { version = "0.3.0" }
 native-tls = "0.2.4"
@@ -34,28 +34,30 @@ log = "0.4.8"
 chrono = {version = "0.4.11", features = ["serde"]}
 failure = "0.1.7"
 failure_derive = "0.1.7"
-pam-auth = { package = "pam", version = "0.7.0", optional = true }
 hyper = { version = "0.13.5", optional = true }
 percent-encoding = { version = "2.1.0", optional = true }
 serde = { version = "1.0.106", optional = true, features = ["derive"] }
-serde_json = { version = "1.0.51", optional = true }
+serde_json = { version = "1.0.52", optional = true }
 path_abs = "0.5.0"
 prometheus = "0.8.0"
 uuid = { version = "0.8.1", features = ["v4"] }
 rand = "0.7.3"
 
 hyper-rustls = {version = "0.20.0", optional = true}
-yup-oauth2 = {version = "4.1.0", optional = true}
+yup-oauth2 = {version = "4.1.1", optional = true}
 mime = {version = "0.3.16", optional = true}
 itertools = "0.9.0"
 proxy-protocol = {version = "0.1.1"}
+
+[target.'cfg(unix)'.dependencies]
+pam-auth = { package = "pam", version = "0.7.0", optional = true }
 
 [dev-dependencies]
 tempfile = "3.1.0"
 ftp = "3.0.1"
 pretty_env_logger = "0.4.0"
 pretty_assertions = "0.6.1"
-tokio = { version = "0.2.18", features = ["rt-threaded"]}
+tokio = { version = "0.2.20", features = ["rt-threaded"]}
 clap = "2.33.0"
 
 [features]
@@ -64,10 +66,6 @@ rest_auth = ["hyper", "percent-encoding", "serde", "serde_json"]
 jsonfile_auth = ["serde", "serde_json"]
 cloud_storage = ["oauth2", "mime", "percent-encoding", "hyper", "serde", "serde_json"]
 oauth2 = ["yup-oauth2", "hyper-rustls"]
-
-[[example]]
-name = "pam"
-required-features = ["pam_auth"]
 
 [[example]]
 name = "gcs"
