--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,7 @@ regex = "1.3.7"
 futures = {version = "0.3.4", features = ["compat", "io-compat", "std"]}
 tokio = { version = "0.2.20", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs"]}
 tokio-util = { version = "0.3.1", features=["codec"] }
-tokio-tls = { version = "0.3.0" }
-native-tls = "0.2.4"
+tokio-rustls = { version = "0.13.0" }
 rustls = "0.17.0"
 bytes = "0.5.4"
 lazy_static = "1.4.0"
