--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ path_abs = "0.5.0"
 prometheus = "0.8.0"
 uuid = { version = "0.8.1", features = ["v4"] }
 rand = "0.7.3"
+chashmap = { version = "2.2.2" }
 
 hyper-rustls = {version = "0.20.0", optional = true}
 yup-oauth2 = {version = "4.1.1", optional = true}
