--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ bytes = "0.5.4"
 lazy_static = "1.4.0"
 log = "0.4.8"
 chrono = {version = "0.4.11", features = ["serde"]}
-failure = "0.1.7"
-failure_derive = "0.1.7"
+failure = "0.1.8"
+failure_derive = "0.1.8"
 hyper = { version = "0.13.5", optional = true }
 percent-encoding = { version = "2.1.0", optional = true }
 serde = { version = "1.0.106", optional = true, features = ["derive"] }
@@ -41,9 +41,12 @@ path_abs = "0.5.0"
 prometheus = "0.8.0"
 uuid = { version = "0.8.1", features = ["v4"] }
 rand = "0.7.3"
+tracing-futures = { version = "0.2.4", features = ["tokio", "std", "std-future"]}
+tracing-attributes = "0.1.7"
+tracing = "0.1.13"
 
 hyper-rustls = {version = "0.20.0", optional = true}
-yup-oauth2 = {version = "4.1.1", optional = true}
+yup-oauth2 = {version = "4.1.2", optional = true}
 mime = {version = "0.3.16", optional = true}
 itertools = "0.9.0"
 proxy-protocol = {version = "0.1.1"}
@@ -58,6 +61,7 @@ pretty_env_logger = "0.4.0"
 pretty_assertions = "0.6.1"
 tokio = { version = "0.2.20", features = ["rt-threaded"]}
 clap = "2.33.0"
+tracing-subscriber = "0.2.5"
 
 [features]
 pam_auth = ["pam-auth"]
