--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,31 +20,31 @@ categories = ["network-programming"]
 edition = "2018"
 
 [dependencies]
-async-trait = "0.1.30"
-regex = "1.3.7"
-futures = {version = "0.3.4", features = ["compat", "io-compat", "std"]}
-tokio = { version = "0.2.20", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs"]}
+async-trait = "0.1.36"
+regex = "1.3.9"
+futures = {version = "0.3.5", features = ["std"]}
+tokio = { version = "0.2.21", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs"]}
 tokio-util = { version = "0.3.1", features=["codec"] }
-tokio-rustls = { version = "0.13.0" }
+tokio-rustls = { version = "0.13.1" }
 rustls = "0.17.0"
-bytes = "0.5.4"
+bytes = "0.5.5"
 lazy_static = "1.4.0"
-slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_warn"] }
+slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
 slog-stdlog = "4.0.0"
-chrono = {version = "0.4.11", features = ["serde"]}
-failure = "0.1.7"
-failure_derive = "0.1.7"
-hyper = { version = "0.13.5", optional = true }
+chrono = {version = "0.4.12", features = ["serde"]}
+failure = "0.1.8"
+failure_derive = "0.1.8"
+hyper = { version = "0.13.6", optional = true }
 percent-encoding = { version = "2.1.0", optional = true }
-serde = { version = "1.0.106", optional = true, features = ["derive"] }
-serde_json = { version = "1.0.52", optional = true }
+serde = { version = "1.0.114", optional = true, features = ["derive"] }
+serde_json = { version = "1.0.56", optional = true }
 path_abs = "0.5.0"
-prometheus = "0.8.0"
+prometheus = "0.9.0"
 uuid = { version = "0.8.1", features = ["v4"] }
 rand = "0.7.3"
-tracing-futures = { version = "0.2.4", features = ["tokio", "std", "std-future"]}
-tracing-attributes = "0.1.7"
-tracing = "0.1.13"
+tracing-futures = { version = "0.2.4", features = ["std", "std-future", "futures-03"]}
+tracing-attributes = "0.1.8"
+tracing = "0.1.15"
 
 hyper-rustls = {version = "0.20.0", optional = true}
 yup-oauth2 = {version = "4.1.2", optional = true}
@@ -57,12 +57,12 @@ pam-auth = { package = "pam", version = "0.7.0", optional = true }
 
 [dev-dependencies]
 tempfile = "3.1.0"
-ftp = "3.0.1"
+async_ftp = "4.0.1"
 pretty_env_logger = "0.4.0"
 pretty_assertions = "0.6.1"
-tokio = { version = "0.2.20", features = ["rt-threaded"]}
-clap = "2.33.0"
-tracing-subscriber = "0.2.5"
+tokio = { version = "0.2.21", features = ["rt-threaded"]}
+clap = "2.33.1"
+tracing-subscriber = "0.2.7"
 log = "0.4.8"
 
 [features]
