--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ async-trait = "0.1.36"
 regex = "1.3.9"
 futures = {version = "0.3.5", features = ["std"]}
 tokio = { version = "0.2.22", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs"]}
-tokio-util = { version = "0.3.1", features=["codec"] }
+tokio-util = { version = "0.3.1", features=["codec", "compat"] }
 tokio-rustls = { version = "0.14.0" }
 rustls = "0.18.0"
 bytes = "0.5.6"
@@ -34,7 +34,7 @@ slog-stdlog = "4.0.0"
 chrono = {version = "0.4.13", features = ["serde"]}
 failure = "0.1.8"
 failure_derive = "0.1.8"
-hyper = { version = "0.13.7", optional = true }
+hyper = { version = "0.13.7", optional = true, features= ["runtime", "stream"]}
 percent-encoding = { version = "2.1.0", optional = true }
 serde = { version = "1.0.114", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.57", optional = true }
