--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ slog-stdlog = "4.0.0"
 chrono = {version = "0.4.15", features = ["serde"]}
 failure = "0.1.8"
 failure_derive = "0.1.8"
+thiserror = "1.0.20"
 hyper = { version = "0.13.7", optional = true, features= ["runtime", "stream"]}
 percent-encoding = { version = "2.1.0", optional = true }
 serde = { version = "1.0.115", optional = true, features = ["derive"] }
