Added option to enforce FTPS on the data channel (#248)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ slog-stdlog = "4.0.0"
 chrono = {version = "0.4.15", features = ["serde"]}
 failure = "0.1.8"
 failure_derive = "0.1.8"
-derive_more = "0.99.9"
+derive_more = { version = "0.99.9", features = ["display"] }
 thiserror = "1.0.20"
 hyper = { version = "0.13.7", optional = true, features= ["runtime", "stream"]}
 percent-encoding = { version = "2.1.0", optional = true }
