added system test for GCS. bypassing oauth for the time being.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,3 +83,8 @@ required-features = ["rest_auth"]
 [[example]]
 name = "jsonfile_auth"
 required-features = ["jsonfile_auth"]
+
+[[test]]
+name = "gcs"
+path = "tests/gcs.rs"
+required-features = ["cloud_storage"]
