--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,8 @@ pam-auth = { package = "pam", version = "0.7.0", optional = true }
 [dev-dependencies]
 async_ftp = "4.0.1"
 clap = "2.33.3"
-log = "0.4.11"
+slog-term = "2.6.0"
+slog-async = "2.3.0"
 pretty_assertions = "0.6.1"
 pretty_env_logger = "0.4.0"
 tempfile = "3.1.0"
