--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,12 +58,14 @@ pam-auth = { package = "pam", version = "0.7.0", optional = true }
 [dev-dependencies]
 async_ftp = "4.0.4"
 clap = "2.33.3"
-log = "0.4.11"
+slog-term = "2.6.0"
+slog-async = "2.3.0"
 pretty_assertions = "0.6.1"
 pretty_env_logger = "0.4.0"
 tempfile = "3.1.0"
 tokio = { version = "0.3.5", features = ["rt-multi-thread"]}
 tracing-subscriber = "0.2.15"
+more-asserts = "0.2.1"
 
 [features]
 pam_auth = ["pam-auth"]
