--- a/crates/unftp-auth-pam/Cargo.toml
+++ b/crates/unftp-auth-pam/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "unftp-auth-pam"
 version = "0.1.0"
+description = "An authenticator back-end for libunftp that authenticates against PAM"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -10,7 +11,7 @@ authors = [
 ]
 edition = "2018"
 license = "Apache-2.0"
-keywords = ["libunftp", "unftp", "ftp", "ftps", "pam", "auth", "authenticator"]
+keywords = ["libunftp", "unftp", "ftp", "ftps", "pam"]
 categories = ["network-programming"]
 documentation = "https://docs.rs/unftp-auth-pam"
 homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-pam"
