--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "unftp-sbe-fs"
 version = "0.1.0"
+description = "A storage back-end for libunftp, storing files on local disk"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -10,14 +11,12 @@ authors = [
 ]
 edition = "2018"
 license = "Apache-2.0"
-keywords = ["libunftp", "unftp", "ftp", "ftps", "storage", "filesystem"]
+keywords = ["libunftp", "unftp", "ftp", "ftps", "filesystem"]
 categories = ["network-programming"]
 documentation = "https://docs.rs/unftp-sbe-fs"
 homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-fs"
 repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-fs"
 readme = "README.md"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 async-trait = "0.1.42"
