feat: use hashed passwords in json auth
Instead of reading the unencrypted passford from json
use the the hashed base64 encoded value in teh json.
The algorithm currently suppertod is: pbkdf2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ edition = "2018"
 [workspace]
 
 members = [
-    "crates/unftp-auth-jsonfile",
+    "crates/unftp-auth-json",
     "crates/unftp-auth-pam",
     "crates/unftp-auth-rest",
     "crates/unftp-sbe-fs",
