--- a/crates/unftp-auth-json/Cargo.toml
+++ b/crates/unftp-auth-json/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unftp-auth-jsonfile"
+name = "unftp-auth-json"
 version = "0.1.0"
 description = "An authenticator back-end for libunftp that authenticates against a JSON file"
 authors = [
@@ -12,9 +12,9 @@ edition = "2018"
 license = "Apache-2.0"
 keywords = ["libunftp", "unftp", "ftp", "ftps", "json"]
 categories = ["network-programming"]
-documentation = "https://docs.rs/unftp-auth-jsonfile"
-homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-jsonfile"
-repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-jsonfile"
+documentation = "https://docs.rs/unftp-auth-json"
+homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-json"
+repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-json"
 readme = "README.md"
 
 [dependencies]
@@ -26,6 +26,8 @@ serde_json = { version = "1.0.62" }
 tokio = { version = "1.2.0", features = ["rt", "time"]}
 tracing = "0.1.23"
 tracing-attributes = "0.1.12"
+ring = "0.16.20"
+base64 = "0.13.0"
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
