Reduce chrono features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ members = [
 async-trait = "0.1.50"
 bitflags = "1.2.1"
 bytes = "1.0.1"
-chrono = {version = "0.4.19", features = ["serde"]}
+chrono = { version = "0.4.19", default-features = false, features = ["std"] }
 derive_more = { version = "0.99.14", features = ["display"] }
 futures = {version = "0.3.15", features = ["std"]}
 lazy_static = "1.4.0"
