Reduce tokio features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ rustls = "0.19.1"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.0"
 thiserror = "1.0.25"
-tokio = { version = "1.6.0", features = ["rt", "net", "sync", "io-util", "macros", "time", "fs"]}
+tokio = { version = "1.6.0", features = ["rt", "net", "sync", "io-util", "time"] }
 tokio-stream = "0.1.6"
 tokio-rustls = { version = "0.22.0" }
 tokio-util = { version = "0.6.7", features = ["codec"] }
@@ -57,5 +57,5 @@ uuid = { version = "0.8.2", features = ["v4"] }
 
 [dev-dependencies]
 pretty_assertions = "0.7.1"
-tokio = { version = "1.5.0", features = ["rt-multi-thread"]}
+tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"]}
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs"}
