--- a/crates/unftp-auth-rest/Cargo.toml
+++ b/crates/unftp-auth-rest/Cargo.toml
@@ -27,7 +27,7 @@ percent-encoding = { version = "2.1.0"}
 regex = "1.4.6"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = { version = "1.0.64"}
-tokio = { version = "1.5.0", features = ["rt", "net", "sync", "io-util", "macros", "time", "fs"]}
+tokio = { version = "1.5.0", features = ["rt", "net", "sync", "io-util", "time"] }
 tracing = "0.1.25"
 tracing-attributes = "0.1.15"
 
