--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -23,7 +23,7 @@ async-trait = "0.1.50"
 libunftp = { version="0.17.4", path="../../"}
 tracing = "0.1.25"
 tracing-attributes = "0.1.15"
-tokio = { version = "1.5.0", features = ["rt", "net", "sync", "io-util", "macros", "time", "fs"]}
+tokio = { version = "1.5.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
 tokio-stream = "0.1.5"
 futures = {version = "0.3.14", features = ["std"]}
 path_abs = "0.5.0"
@@ -35,7 +35,7 @@ slog-term = "2.8.0"
 slog-async = "2.6.0"
 pretty_assertions = "0.7.1"
 tempfile = "3.2.0"
-tokio = { version = "1.5.0", features = ["rt-multi-thread"]}
+tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"]}
 tracing-subscriber = "0.2.15"
 more-asserts = "0.2.1"
 pretty_env_logger = "0.4.0"
